[package]
name = "sanitize-input"
version = "1.0.0"
authors = ["Alyx Mote <figments@outlook.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sanitize_input"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"

# Library specific dependencies
ammonia = "3.1.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
